--- a/style.css
+++ b/style.css
@@ -11,11 +11,6 @@ body {
 
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-}
 
 /* header style start */
 .header {
@@ -23,121 +18,287 @@ body {
 }
 
 .banner {
-    width: 1170px;
+    display: flex;
+    flex-direction: row;
     background-color: #161616;
-    height: 566px;
+    width: 1170px;
     margin: 0 auto;
     border-radius: 30px;
 }
 
 .banner-content {
+    width: 50%;
+    padding-top: 40px;
+    padding-right: 40px;
+}
+
+.banner-content .left-content {
+    padding-top: 60px;
     padding-left: 60px;
-
 }
 
-.banner-content h1 {
-    color: #FFFFFF;
-    font-size: 48px;
-    font-weight: 700;
+.banner-content .left-content h1 {
+    color: #ffffff;
+    font-size: 44px;
     line-height: 60px;
-    padding-bottom: 20px;
+    margin-bottom: 30px;
+    text-align: center;
 }
 
-.banner-content p {
-    color: #FFFFFF;
+.banner-content .left-content p {
+    color: #ffffff;
+    margin-bottom: 30px;
     font-size: 16px;
     font-weight: 400;
-    padding-bottom: 30px;
+    text-align: center;
+}
+
+.banner-btn {
+    background: #DD0000;
+    padding: 16px 25px;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 20;
+    font-weight: 400;
+}
+
+.fa-chevron-right {
+    margin-left: 10px;
+    font-size: 20px;
 }
 
 .banner-content img {
-    width: 90%;
-    margin-top: 69px;
+    width: 100%;
 }
 
-.banner-content a {
-    background: #DD0000;
-    text-decoration: none;
-    padding: 12px 25px;
+/* blogs section style start */
+.blog {
+    margin: 0 auto;
+    width: 1170px;
+    margin-top: 130px;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    column-gap: 24px;
+}
+
+.navigagion {
+    background-color: #161616;
+    width: 25%;
     border-radius: 10px;
-    color: #FFFFFF;
-    font-size: 20px;
-    font-weight: 400;
+    height: 312px;
 }
 
-.banner-content a .fa-angle-right {
-    margin-left: 10px;
+.navigagion nav ul {
+    list-style: none;
+}
+
+.navigagion nav ul li {
+    background-color: #FFFFFF;
+    margin: 30px 30px;
+    text-align: center;
+    padding: 16px 0px;
+    border-radius: 10px;
+}
+
+#active {
+    background: #DD0000;
+}
+
+#active-color {
+    color: #ffffff;
+}
+
+.navigagion nav ul li a {
+    text-decoration: none;
+    color: #161616;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.blogs {
+    width: 75%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 24px;
+}
+
+.blog-parents {
+    background-color: #ffffff;
+    border-radius: 10px;
+}
+
+.blog-thumbnail img {
+    width: 100%;
+}
+
+.blog-details {
+    padding: 20px;
+}
+
+.blog-details a {
+    olor: #161616;
+    font-size: 16px;
+    font-weight: 500;
+    text-decoration: none;
+    border: 1px solid #161616;
+    padding: 5px 20px;
+    border-radius: 4px;
+}
+
+.blog-details a:hover {
+    color: #DD0000;
+}
+
+.blog-details h4 {
+    font-size: 18px;
+    font-weight: 600;
+    color: #161616;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+
+.blog-details span {
+    font-size: 16px;
+    font-weight: 400;
+    color: #161616;
+    margin-right: 30px;
+}
+
+.blog-details span .fa-clock {
+    margin-right: 10px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #161616;
+}
+
+.blog-details span .fa-message {
+    margin-right: 10px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #161616;
+}
+
+/* footer section */
+.footer {
+    background-color: #161616;
+    margin-top: 100px;
+}
+
+.footer-parents {
+    width: 1170px;
+    margin: 0 auto;
+}
+
+.top-footer {
+    padding-top: 100px;
+}
+
+.top-footer h1 {
+    font-size: 40px;
+    font-weight: 600;
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.bottom-footer {
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+    padding-bottom: 100px;
+}
+
+.bottom-footer div {
+    margin: 20px 45px;
+}
+
+.bottom-footer div a {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.bottom-footer div a:hover {
+    color: #DD0000;
 }
 
 /* mobie device */
 @media only screen and (max-width: 576px) {
-    .grid-container {
-        grid-template-columns: repeat(1, 1fr);
-        justify-items: center;
-    }
 
+    /* banner section */
     .banner {
+        flex-direction: column;
+        align-items: center;
         width: 100%;
-        height: 100%;
-    }
-
-    .banner-content {
-        padding: 14px 28px;
-        padding-bottom: 0px;
     }
 
     .banner-content img {
         width: 100%;
     }
 
-    .banner-content h1 {
-        text-align: center;
-        font-size: 24px;
-        line-height: 30px;
+    /* blog section */
+    .flex-container {
+        flex-direction: column;
+        column-gap: 24px;
+        align-items: center;
     }
 
-    .banner-content p {
-        font-size: 14px;
-        text-align: center;
+    .blogs {
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+    }
+
+    .blog-thumbnail img {
+        width: 100%;
+    }
+
+    .navigagion {
+        background-color: transparent;
+    }
+
+    .footer-parents {
+        width: 100%;
+    }
+
+    .bottom-footer {
+        flex-direction: column;
     }
 
 }
 
 /* medium device */
 @media only screen and (min-width: 577px) and (max-width: 991px) {
-    .grid-container {
-        grid-template-columns: repeat(2, 1fr);
-        justify-items: center;
-    }
-
     .banner {
-        width: 100%;
-        height: 100%;
-        margin: 0 auto;
+        flex-direction: row;
     }
 
-    .banner-content {
-        padding: 14px 28px;
-        padding-bottom: 0px;
-    }
-
-    .banner-content h1 {
-        font-size: 24px;
-        line-height: 30px;
-    }
-
-    .banner-content p {
-        font-size: 14px;
-    }
-}
-
-/* large device */
-@media only screen and (min-width: 993px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+    .flex-container {
+        flex-direction: column;
+        column-gap: 24px;
         align-items: center;
     }
 
+    .navigagion {
+        background-color: transparent;
+        margin-bottom: 50px;
+    }
 
+    .blogs {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .footer-parents {
+        width: 100%;
+    }
+
+    .bottom-footer {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center
+    }
 }
