--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+/*================================= core css ===================================*/
 * {
     margin: 0;
     padding: 0;
@@ -12,7 +13,7 @@ body {
 }
 
 
-/* header style start */
+/*============================== header style start =============================*/
 .header {
     margin-top: 50px;
 }
@@ -72,7 +73,7 @@ body {
     width: 100%;
 }
 
-/* blogs section style start */
+/*=================================== blogs section style start =============================*/
 .blog {
     margin: 0 auto;
     width: 1170px;
@@ -119,17 +120,37 @@ body {
     font-weight: 500;
 }
 
+.navigagion nav ul li a:hover {
+    color: limegreen;
+}
+
 .blogs {
     width: 75%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 24px;
+    justify-items: center;
 }
 
 .blog-parents {
-    background-color: #ffffff;
+    background-color: #efe9e9;
     border-radius: 10px;
 }
+
+.blog-parents .flag {
+    margin-top: 70px;
+    display: flex;
+    align-items: center;
+}
+
+.flag div {
+    padding: 0px 10px;
+}
+
+.flag div img {
+    width: 100%;
+}
+
 
 .blog-thumbnail img {
     width: 100%;
@@ -182,7 +203,24 @@ body {
     color: #161616;
 }
 
-/* footer section */
+.view-btn {
+    width: 200px;
+    margin-left: 525px;
+    margin-top: 60px;
+    display: none;
+}
+
+.view-btn a {
+    background-color: #DD0000;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 12px 30px;
+    border-radius: 5px;
+}
+
+/*============================================= footer section ==============================*/
 .footer {
     background-color: #161616;
     margin-top: 100px;
@@ -227,7 +265,9 @@ body {
     color: #DD0000;
 }
 
-/* mobile device */
+/*=========================================== Media Queries code ============================*/
+
+/*============== mobile device =============*/
 @media only screen and (max-width: 576px) {
 
     /* banner section */
@@ -270,6 +310,7 @@ body {
         width: 100%;
     }
 
+    /* footer section */
     .footer-parents {
         width: 100%;
     }
@@ -282,12 +323,15 @@ body {
 }
 
 
-/* medium device */
+/*===================== medium device ============================ */
 @media only screen and (min-width: 577px) and (max-width: 991px) {
+
+    /* banner section */
     .banner {
         flex-direction: row;
     }
 
+    /* blog section */
     .flex-container {
         flex-direction: column;
         column-gap: 24px;
@@ -303,12 +347,19 @@ body {
         grid-template-columns: repeat(2, 1fr);
     }
 
+    .view-btn {
+        display: block;
+    }
+
+    /* footer section */
     .footer {
         width: 100%;
+        padding: 0px 200px;
     }
 
     .footer-parents {
         width: 100%;
+        margin: 0 auto;
     }
 
     .top-footer {
